--- a/src/app/new-transfer/new-transfer.component.scss
+++ b/src/app/new-transfer/new-transfer.component.scss
@@ -29,6 +29,9 @@
     min-height: fit-content;
     gap: 0.05em;
     animation: fadeIn 0.4s ease-in-out forwards;
+    gap: .5rem;
+    padding: .5rem;
+    background-color: #f5a012;
   }
 
 
