--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,7 +31,7 @@ body {
 
 body {
 	font: var(--text1regular);
-	background-color: #f5a012;
+	background-color: #fff;
 	display: flex;
 	justify-content: center;
 	align-items: center;
