--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -3,15 +3,7 @@
 </div>
 <div class="container">
   <div class="menu card-container" [ngClass]="{'expanded': isPinRequired()}">
-    <div class="button-group">
-      <button class="button" [class.active]="(activeTab$ | async) === 'card'" (click)="navigateToCard()">Card</button>
-    </div>
-    <!-- <div class="button-group">
-      <button class="button" [class.active]="(activeTab$ | async) === 'transfer'" (click)="navigateToTransfer()">Transfer</button>
-    </div> -->
-    <div class="button-group">
-      <button class="button" [class.active]="(activeTab$ | async) === 'newTransfer'" (click)="navigateToNewTransfer()">Transfer</button>
-    </div>
+    <app-navbar></app-navbar>
   </div>
   <div class="card card-container" style="min-width: 600px; padding: 20px;" [ngClass]="{'expanded': isPinRequired()}">
     <div class="card__header">
