--- a/src/app/new-transfer/new-transfer.component.html
+++ b/src/app/new-transfer/new-transfer.component.html
@@ -1,15 +1,6 @@
 <div class="container">
-    <div class="menu" style="height: 700px;">
-        <div class="button-group">
-          <button class="button" [class.active]="(activeTab$ | async) === 'card'" (click)="navigateToCard()">Card</button>
-        </div>
-        <!-- <div class="button-group">
-          <button class="button" [class.active]="(activeTab$ | async) === 'transfer'" (click)="navigateToTransfer()">Transfer</button>
-        </div> -->
-    
-        <div class="button-group">
-          <button class="button" [class.active]="(activeTab$ | async) === 'newTransfer'" (click)="navigateToNewTransfer()">Transfer</button>
-        </div>
+    <div class="menu card-container" style="height: 700px;">
+      <app-navbar></app-navbar>
       </div>
     <div class="payment-modal">
         <div class="card__header">
